<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".ContactDetails">

    <TextView
        android:id="@+id/ProfileInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amaranth_bold"
        android:text="@string/app_contactDetails"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="170dp"
        android:layout_height="29dp"
        android:fontFamily="@font/arbutus_slab"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:text="@string/app_contactName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.068"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileInfo"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="203dp"
        android:layout_height="29dp"
        android:fontFamily="@font/arbutus_slab"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileInfo"
        app:layout_constraintVertical_bias="0.027" />

    <TextView
        android:id="@+id/Phone"
        android:layout_width="169dp"
        android:layout_height="29dp"
        android:fontFamily="@font/arbutus_slab"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:text="@string/app_contactNumber"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileInfo"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/phoneView"
        android:layout_width="203dp"
        android:layout_height="29dp"
        android:fontFamily="@font/arbutus_slab"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileInfo"
        app:layout_constraintVertical_bias="0.091" />

    <TextView
        android:id="@+id/Email"
        android:layout_width="169dp"
        android:layout_height="28dp"
        android:fontFamily="@font/arbutus_slab"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:text="@string/app_contactEmail"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileInfo"
        app:layout_constraintVertical_bias="0.155" />

    <TextView
        android:id="@+id/emailView"
        android:layout_width="203dp"
        android:layout_height="29dp"
        android:fontFamily="@font/arbutus_slab"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileInfo"
        app:layout_constraintVertical_bias="0.156" />

    <TextView
        android:id="@+id/Address"
        android:layout_width="170dp"
        android:layout_height="29dp"
        android:fontFamily="@font/arbutus_slab"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:text="@string/app_contactAddress"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileInfo"
        app:layout_constraintVertical_bias="0.225" />

    <TextView
        android:id="@+id/addressView"
        android:layout_width="203dp"
        android:layout_height="29dp"
        android:fontFamily="@font/arbutus_slab"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileInfo"
        app:layout_constraintVertical_bias="0.225" />

    <TextView
        android:id="@+id/City"
        android:layout_width="170dp"
        android:layout_height="29dp"
        android:fontFamily="@font/arbutus_slab"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:text="@string/app_city"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileInfo"
        app:layout_constraintVertical_bias="0.291" />

    <TextView
        android:id="@+id/cityView"
        android:layout_width="203dp"
        android:layout_height="29dp"
        android:fontFamily="@font/arbutus_slab"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileInfo"
        app:layout_constraintVertical_bias="0.291" />

    <TextView
        android:id="@+id/Zip"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:fontFamily="@font/arbutus_slab"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:text="@string/app_zipcode"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileInfo"
        app:layout_constraintVertical_bias="0.362" />

    <TextView
        android:id="@+id/zipView"
        android:layout_width="203dp"
        android:layout_height="29dp"
        android:fontFamily="@font/arbutus_slab"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileInfo"
        app:layout_constraintVertical_bias="0.362" />

    <TextView
        android:id="@+id/Country"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:fontFamily="@font/arbutus_slab"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:text="@string/app_country"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileInfo"
        app:layout_constraintVertical_bias="0.43" />

    <TextView
        android:id="@+id/countryView"
        android:layout_width="203dp"
        android:layout_height="29dp"
        android:fontFamily="@font/arbutus_slab"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileInfo"
        app:layout_constraintVertical_bias="0.429" />

    <TextView
        android:id="@+id/Organization"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:fontFamily="@font/arbutus_slab"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:text="@string/app_org"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileInfo"
        app:layout_constraintVertical_bias="0.497" />

    <TextView
        android:id="@+id/orgView"
        android:layout_width="203dp"
        android:layout_height="29dp"
        android:fontFamily="@font/arbutus_slab"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileInfo"
        app:layout_constraintVertical_bias="0.496" />

    <TextView
        android:id="@+id/Profession"
        android:layout_width="170dp"
        android:layout_height="30dp"
        android:fontFamily="@font/arbutus_slab"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:text="@string/app_profession"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileInfo"
        app:layout_constraintVertical_bias="0.564" />

    <TextView
        android:id="@+id/profView"
        android:layout_width="203dp"
        android:layout_height="29dp"
        android:fontFamily="@font/arbutus_slab"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ProfileInfo"
        app:layout_constraintVertical_bias="0.565" />

</androidx.constraintlayout.widget.ConstraintLayout>